Add Left Section
* Add Logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     </head>
 
     <body>
-        Hello World!
+        <div class="left-section">
+            <div class="logo-container">
+                <div class="logo">
+                    <img src="images/odin-lined.png" alt="logo" id="logo">
+                    <span>ODIN</span>
+                </div>
+            </div>
+        </div>
+        <div class="right-section">
+
+        </div>
     </body>
 </html>
