--- a/index.html
+++ b/index.html
@@ -17,7 +17,52 @@
             </div>
         </div>
         <div class="right-section">
+            <div class="text">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>
+                Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <form action="" method="post">
+                <div class="inputs">
+                    <p>Let's do this!</p>
+                    <div class="form-row">
+                        <div class="form-element">
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" name="first-name" id="first-name">
+                        </div>
 
+                        <div>
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-element">
+                            <label for="email">EMAIL</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+
+                        <div class="form-element">
+                            <label for="phone">PHONE NUMBER</label>
+                            <input type="tel" name="phone" id="phone">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-element">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" name="password" id="password">
+                        </div>
+
+                        <div class="form-element">
+                            <label for="confirm">CONFIRM PASSWORD</label>
+                            <input type="password" name="vonfirm" id="confirm">
+                        </div>
+                    </div>
+                </div>
+
+                <button>Create Account</button>
+            </form>
+            <p class="have-account">Already have an account? <a href="">Log in</a></p>
         </div>
     </body>
 </html>
