--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <button>Create Account</button>
             </form>
-            <p class="have-account">Already have an account? <a href="">Log in</a></p>
+            <p class="have-account">Already have an account? <a href=""><strong>Log in</strong></a></p>
         </div>
     </body>
 </html>
